--- a/src/app/search-strain/search-strain.page.html
+++ b/src/app/search-strain/search-strain.page.html
@@ -9,6 +9,12 @@
 
 <ion-content>
 
-  <ion-searchbar></ion-searchbar>
+  <ion-searchbar [(ngModel)]="searchTerm" (ngModelChange)="search(searchTerm)"></ion-searchbar>
+
+  <ion-list>
+    <ion-item *ngFor="let item of items">
+      <ion-label>{{item.title}}</ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
