--- a/src/app/grow-create/grow-create.page.html
+++ b/src/app/grow-create/grow-create.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="light">
-    <ion-title>Add grow log</ion-title>
+    <ion-title>Start a grow log</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -9,7 +9,7 @@
   <ion-list>
 
     <ion-item>
-      <ion-label position="floating">Grow Name</ion-label>
+      <ion-label position="floating">Code name</ion-label>
       <ion-input [(ngModel)]="newItem.name"></ion-input>
     </ion-item>
 
