--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -41,7 +41,7 @@
     </ion-list>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button [routerLink]="['/strain-create']">
+        <ion-fab-button [routerLink]="['/grow-create']">
             <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
