--- a/src/app/search-strain/search-strain.page.html
+++ b/src/app/search-strain/search-strain.page.html
@@ -13,14 +13,14 @@
 
     <ion-list>
 
-        <ion-item *ngFor="let strain of strains" (click)="addStrain(strain)">
-            <ion-avatar slot="start">
-                <img src="{{strain['image-1']}}">
-            </ion-avatar>
+        <ion-item *ngFor="let strain of strains.strains | keyvalue" (click)="addStrain(strain)">
+<!--            <ion-avatar slot="start">-->
+<!--                <img src="{{strain['image-1']}}">-->
+<!--            </ion-avatar>-->
             <ion-label>
-                <h2>{{strain.name}}</h2>
-                <h3>{{strain.breeder}}</h3>
-                <p>{{strain.genetics}}</p>
+                <h2>{{strain.value.name}}</h2>
+                <h3>{{strain.value.brname}}</h3>
+<!--                <p>{{strain|json}}</p>-->
             </ion-label>
         </ion-item>
 
