--- a/src/app/grow-create/grow-create.page.html
+++ b/src/app/grow-create/grow-create.page.html
@@ -1,58 +1,91 @@
 <ion-header>
-  <ion-toolbar color="light">
-    <ion-title>Start a grow log</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="light">
+        <ion-title>Start a grow log</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <ion-list>
+    <ion-list>
 
-    <ion-item>
-      <ion-label position="floating">Code name</ion-label>
-      <ion-input [(ngModel)]="newItem.name"></ion-input>
+        <ion-item>
+            <ion-label position="floating">Grow name</ion-label>
+            <ion-input [(ngModel)]="newItem.name"></ion-input>
+        </ion-item>
+
+        <ion-card>
+            <img src="https://www.cannabist.co.za/wp-content/uploads/2019/03/Cannabist-Logo-768x768.png"/>
+            <ion-card-content>
+                <ion-button color="success" fill="outline" expand="block" (click)="takePhoto()">
+                    Take a photo
+                </ion-button>
+            </ion-card-content>
+        </ion-card>
+
+        <!--        <ion-item>-->
+        <!--            <ion-label>Medium/substrate</ion-label>-->
+        <!--            <ion-select placeholder="Select One" [(ngModel)]="newItem.medium">-->
+        <!--                <ion-select-option value="soil">Soil</ion-select-option>-->
+        <!--                <ion-select-option value="coco">Coco/mixstuff</ion-select-option>-->
+        <!--                <ion-select-option value="hydro">Hydroponic</ion-select-option>-->
+        <!--            </ion-select>-->
+        <!--        </ion-item>-->
+
+    </ion-list>
+
+    <ion-list-header>
+        <ion-label>CANNABIS STRAIN/S</ion-label>
+    </ion-list-header>
+
+    <ion-item *ngIf="strains != null">
+        <ion-label>No strains yet, <a (click)="presentModal()">add one</a></ion-label>
     </ion-item>
 
-    <ion-item>
-      <ion-label>Medium</ion-label>
-      <ion-select placeholder="Select One" [(ngModel)]="newItem.medium">
-        <ion-select-option value="soil">Soil</ion-select-option>
-        <ion-select-option value="hydro">Hydroponic</ion-select-option>
-      </ion-select>
-    </ion-item>
+    <ion-card *ngFor="let strain of strains | async">
+        <ion-card-header>
+            <ion-card-title>{{strain.name}}</ion-card-title>
+            <ion-card-subtitle>{{strain.brname}}</ion-card-subtitle>
+        </ion-card-header>
+        <img src="https://en.seedfinder.eu/pics/01seeds/{{strain.brid}}/{{strain.brid}}_-_{{strain.id}}.jpg"/>
+        <ion-card-content>
+            Founded in 1829 on an isthmus between Lake Monona and Lake Mendota, Madison was named the capital of the
+            Wisconsin Territory in 1836.
+            <ion-button color="medium" fill="outline" expand="block" (click)="removeItem(strain)">
+                Remove
+            </ion-button>
+        </ion-card-content>
+    </ion-card>
 
-  </ion-list>
+    <!--    <ion-list>-->
 
-  <ion-list>
+    <!--        <ion-item *ngFor="let strain of strains | async">-->
+    <!--            <ion-avatar slot="start">-->
+    <!--                <img src="https://en.seedfinder.eu/pics/01seeds/{{strain.brid}}/{{strain.brid}}_-_{{strain.id}}_thumb.jpg">-->
+    <!--            </ion-avatar>-->
+    <!--            <ion-label>-->
+    <!--                <h2>{{strain.name}}</h2>-->
+    <!--                <h3>{{strain.brname}}</h3>-->
+    <!--            </ion-label>-->
+    <!--        </ion-item>-->
 
-    <ion-item *ngFor="let strain of strains | async">
-      <ion-avatar slot="start">
-        <img src="{{strain['image-1']}}">
-      </ion-avatar>
-      <ion-label>
-        <h2>{{strain.name}}</h2>
-        <h3>{{strain.breeder}}</h3>
-        <p>{{strain.genetics}}</p>
-      </ion-label>
-    </ion-item>
-
-  </ion-list>
+    <!--    </ion-list>-->
 
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+    <ion-toolbar>
 
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-button fill="outline" expand="block" (click)="presentModal()">Add strain</ion-button>
-        </ion-col>
-        <ion-col>
-          <ion-button expand="block" (click)="addItem(newItem)">Next</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+        <ion-grid>
+            <ion-row>
+                <ion-col>
+                    <ion-button color="success" fill="outline" expand="block" (click)="presentModal()">Add strain
+                    </ion-button>
+                </ion-col>
+                <ion-col>
+                    <ion-button color="success" expand="block" (click)="addItem(newItem)">Next</ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
 
-  </ion-toolbar>
+    </ion-toolbar>
 </ion-footer>
