--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,6 +18,13 @@
                 some of the resources below for next steps.</p>
         </ion-card-content>
     </ion-card>
+
+    <h1 *ngIf="afAuth.auth.currentUser">
+        Welcome {{afAuth.auth.currentUser.displayName}}!
+    </h1>
+
+    <ion-button *ngIf="afAuth.auth.currentUser" (click)="signOut()">Sign Out</ion-button>
+
     <ion-list lines="none">
         <ion-list-header>
             <ion-label>Resources</ion-label>
